# Aplikacja-szyfrowanych-wiadomo-ci

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt  u3_enable.json
backend/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/app/: README.md  main.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/core/: config.py  exceptions.py
backend/app/crypto/: aes_gcm.py  hmac_sha256.py  key_management.py  passwords.py  totp.py
backend/app/db/: init.py  models.py  session.py
backend/app/messages/: router.py  schemas.py  service.py
backend/app/middlewares/: content_type.py  error_handler.py  origin.py  rate_limit.py  request_id.py
backend/app/twofa/: router.py  schemas.py  service.py
backend/app/users/: router.py  schemas.py  service.py
backend/scripts/: e2e_2fa_test.py  security_checks.py
database/: README.md  schema.sql
docker/: README.md  generate-dev-tls.ps1  generate-dev-tls.sh  generate-secrets.ps1  smoke-test-container.sh  smoke-test.ps1  smoke-test.sh
frontend/: Dockerfile  README.md  index.html  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: endpoints.ts  errors.ts  http.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: FormField.tsx
frontend/src/hooks/: useQueryParam.ts
frontend/src/pages/: ComposePage.tsx  InboxPage.tsx  LoginPage.tsx  MessagePage.tsx  RegisterPage.tsx  TwoFaPage.tsx  TwoFaSettingsPage.tsx
nginx/: Dockerfile  README.md  check-certs.sh  nginx.conf  nginx.prod.conf
nginx/certs/: README.md
(+3 files in other folders)
